--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,19 +82,19 @@
 <!-----------로그인---------->
 		<section class="sec1">
 			<div class="b-l">
-				<form method="post" action = "/login" id="login-form">
+				<form method="post" action = "/member/login" id="login-form">
 					<table>
 						<tr>
 							<td>
 								<label>
-									<input type="text" name="userName" placeholder="ID">
+									<input type="text" name="loginId" placeholder="ID">
 								</label>
 							</td>
 						</tr>
 						<tr>
 							<td>
 								<label>
-									<input type="password" name="userPassword" placeholder="Password">
+									<input type="password" name="password" placeholder="Password">
 								</label>
 							</td>
 						</tr>
