--- a/src/main/resources/templates/myLog/myLog.html
+++ b/src/main/resources/templates/myLog/myLog.html
@@ -4,8 +4,44 @@
 <h4 th:text="${myLog}"></h4>
 
 <div id="page">
- <table border="1">
+ 
+
+    
+    
+    <div id="pagination">
+	<!-- 맨 처음 페이지로 이동하는 버튼 -->
+    <span th:if="${pageVo.startPage > 1}">
+    <button class="seq" th:text="'처음&emsp;'" th:value="'${pageMapping}'+'1'"></button>
+      <!--   <a th:href="@{'/myLog/myWrite?page=1'}" th:text="'처음&emsp;'"></a> -->
+    </span>
+
+	<!-- 이전 블록으로 이동하는 버튼 -->
+    <span th:if="${pageVo.isPrev == true}">
+    <button class="seq" th:text="'이전'" th:value="'${pageMapping}'+'${pageVo.startPage - 1}'"></button>
+    	<!-- <a th:href="@{'/myLog/myWrite?page='+${pageVo.startPage - 1}}" th:text="'이전'"></a> -->
+    </span>
+
+    <!-- 시퀀스 보여주는 값을 변경. -->
+    <span th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
+    <button class="seq" th:text="|&emsp;${pageNum}&emsp;|" th:value="${pageMapping}+${pageNum}"></button>
+        <!--  <a class="div2" th:href="@{'/myLog/myWrite?page='+${pageNum}}" th:text="|&emsp;${pageNum}&emsp;|"></a>  -->
+    </span>
+	/myLog/myComment?page=
+    <!-- 다음 블록으로 이동하는 버튼 -->
+    <span th:if="${pageVo.isNext == true}">
+    <button class="seq" th:text="'다음'" th:value="'${pageMapping}'+'${pageVo.endPage + 1}'"></button>
+	<!-- <a th:href="@{'/myLog/myWrite?page='+|${pageVo.endPage + 1}|}" th:text="'다음'"></a> -->
+    </span>
+	
+    <!-- 맨 뒷 페이지로 이동하는 버튼 -->
+    <span th:if="${pageVo.endPage < pageVo.totalPageCount}">
+    <button class="seq" th:text="|&emsp;끝|" th:value="'${pageMapping}'+'${pageVo.totalPageCount}'"></button>
+	<!-- <a th:href="@{'/myLog/myWrite?page='+${pageVo.totalPageCount}}" th:text="|&emsp;끝|"></a> -->
+    </span>
+</div>
+<table border="1">
       <tr>
+     <th>보드넘</th>
         <th>카테고리</th>
         <th>제목</th>
         <th>작성자</th>
@@ -14,6 +50,7 @@
       </tr>
       
       <tr th:each="list : ${boardList}">
+<td th:text="${list.boardNum}"></td>      
         <td th:text="${list.category}"></td>
 
         <td th:text="${list.title}"></td>
@@ -22,55 +59,24 @@
         <td th:text="${list.startDate}"></td>
       </tr>
     </table> 
-
-    
-    
-    <div id="pagination">
-	<!-- 맨 처음 페이지로 이동하는 버튼 -->
-    <span th:if="${pageVo.startPage > 1}">
-    <button id="fst" th:text="'처음&emsp;'"></button>
-      <!--   <a th:href="@{'/myLog/myWrite?page=1'}" th:text="'처음&emsp;'"></a> -->
-    </span>
-
-	<!-- 이전 블록으로 이동하는 버튼 -->
-    <span th:if="${pageVo.isPrev == true}">
-    <button id="pre" th:text="'이전'" th:value="@{'/myLog/myWrite?page='+${pageVo.startPage - 1}}"></button>
-    	<!-- <a th:href="@{'/myLog/myWrite?page='+${pageVo.startPage - 1}}" th:text="'이전'"></a> -->
-    </span>
-
-    <!-- 시퀀스 보여주는 값을 변경. -->
-    <span th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
-    <button class="seq" th:text="|&emsp;${pageNum}&emsp;|" th:value="|&emsp;${pageNum}&emsp;|"></button>
-        <!--  <a class="div2" th:href="@{'/myLog/myWrite?page='+${pageNum}}" th:text="|&emsp;${pageNum}&emsp;|"></a>  -->
-    </span>
-	
-    <!-- 다음 블록으로 이동하는 버튼 -->
-    <span th:if="${pageVo.isNext == true}">
-    <button id="next" th:text="'다음'" th:value="|${pageVo.endPage + 1}|"></button>
-	<!-- <a th:href="@{'/myLog/myWrite?page='+|${pageVo.endPage + 1}|}" th:text="'다음'"></a> -->
-    </span>
-	
-    <!-- 맨 뒷 페이지로 이동하는 버튼 -->
-    <span th:if="${pageVo.endPage < pageVo.totalPageCount}">
-    <button id="final" th:text="|&emsp;끝|" th:value="${pageVo.totalPageCount}"></button>
-	<!-- <a th:href="@{'/myLog/myWrite?page='+${pageVo.totalPageCount}}" th:text="|&emsp;끝|"></a> -->
-    </span>
 </div>
 
+
+
+
 </div>
-</div>
-        <script src="/https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 
 
         $(function() {
        
-			$("#fst").click(function() {
+			/* $("#fst").click(function() {
 				$.ajax({
-					url : '/myLog/myWrite?page=1',
+					url : $(this).val(),
 					success : function(x) {
 						 $('#page').html(x); 
-					/* 	$('#showList').load("aa.html .aa") */
+				
 					}
 				})
 			});
@@ -81,21 +87,21 @@
 						$('#page').html(x);
 					}
 				})
-			});
+			}); */
 			
 			$(".seq").click(function() {
 				console.log("clicked");
 				$.ajax({
-					url : '/myLog/myWrite?page='+$(this).val(),
+					url : $(this).val(),
 					success : function(x) {
 						$('#page').html(x);
 					}
 				})
 			});
 			
-			$("#next").click(function() {
+			/* $("#next").click(function() {
 				$.ajax({
-					url : '/myLog/myWrite?page='+$(this).val(),
+					url : $(this).val(),
 					success : function(x) {
 						$('#page').html(x);
 					}
@@ -103,13 +109,15 @@
 			});
 			$("#final").click(function() {
 				$.ajax({
-					url : '/myLog/myWrite?page='+$(this).val(),
+					url : $(this).val(),
 					success : function(x) {
 						$('#page').html(x);
 					}
 				})
-			});
-		});
+			}); */
+		
+        });
+       
 
         </script>
 
