--- a/src/main/resources/templates/myLog/myLog.html
+++ b/src/main/resources/templates/myLog/myLog.html
@@ -1,118 +1,86 @@
 <html>
 
 <div>
-<h4 th:text="${myLog}"></h4>
 
-<div id="page">
- 
+	<div id="page">
 
-    
-    
-    <div id="pagination">
-	<!-- 맨 처음 페이지로 이동하는 버튼 -->
-    <span th:if="${pageVo.startPage > 1}">
-    <button class="seq" th:text="'처음&emsp;'" th:value="${pageMapping}+1"></button>
-    </span>
+		<h4 th:text="${myLog}"></h4>
 
-	<!-- 이전 블록으로 이동하는 버튼 -->
-    <span th:if="${pageVo.isPrev == true}">
-    <button class="seq" th:text="'이전'" th:value="${pageMapping}+${pageVo.startPage - 1}"></button>
-    </span>
+		<table border="1">
+			<tr>
+				<th>보드넘</th>
+				<th>카테고리</th>
+				<th>제목</th>
+				<th>작성자</th>
+				<th>작성일자</th>
+				<th>시작일자</th>
+			</tr>
 
-    <!-- 시퀀스 보여주는 값을 변경. -->
-    <span th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
-    <button class="seq" th:text="|&emsp;${pageNum}&emsp;|" th:value="${pageMapping}+${pageNum}"></button>
-    </span>
-    <!-- 다음 블록으로 이동하는 버튼 -->
-    <span th:if="${pageVo.isNext == true}">
-    <button class="seq" th:text="'다음'" th:value="${pageMapping}+${pageVo.endPage + 1}"></button>
-    </span>
-	
-    <!-- 맨 뒷 페이지로 이동하는 버튼 -->
-    <span th:if="${pageVo.endPage < pageVo.totalPageCount}">
-    <button class="seq" th:text="|&emsp;끝|" th:value="${pageMapping}+${pageVo.totalPageCount}"></button>
-    </span>
-</div>
-<table border="1">
-      <tr>
-     <th>보드넘</th>
-        <th>카테고리</th>
-        <th>제목</th>
-        <th>작성자</th>
-        <th>작성일자</th>
-        <th>시작일자</th>
-      </tr>
-      
-      <tr th:each="list : ${boardList}">
-<td th:text="${list.boardNum}"></td>      
-        <td th:text="${list.category}"></td>
-
-        <td th:text="${list.title}"></td>
-        <td th:text="${list.loginId}"></td>
-        <td th:text="${list.date}"></td>
-        <td th:text="${list.startDate}"></td>
-      </tr>
-    </table> 
-</div>
-
-
-
-
-</div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-
-
-        $(function() {
-       
-			/* $("#fst").click(function() {
-				$.ajax({
-					url : $(this).val(),
-					success : function(x) {
-						 $('#page').html(x); 
-				
-					}
-				})
-			});
-			$("#pre").click(function() {
-				$.ajax({
-					url : $(this).val(),
-					success : function(x) {
-						$('#page').html(x);
-					}
-				})
-			}); */
-			
-			$(".seq").click(function() {
-				console.log("clicked");
-				$.ajax({
-					url : $(this).val(),
-					success : function(x) {
-						$('#page').html(x);
-					}
-				})
-			});
-			
-			/* $("#next").click(function() {
-				$.ajax({
-					url : $(this).val(),
-					success : function(x) {
-						$('#page').html(x);
-					}
-				})
-			});
-			$("#final").click(function() {
-				$.ajax({
-					url : $(this).val(),
-					success : function(x) {
-						$('#page').html(x);
-					}
-				})
-			}); */
+			<tr th:each="list : ${boardList}">
+				<td th:text="${list.boardNum}"></td>
+				<td th:text="${list.category}"></td>
+				<td th:text="${list.title}"></td>
+				<td th:text="${list.loginId}"></td>
+				<td th:text="${list.date}"></td>
+				<td th:text="${list.startDate}"></td>
+			</tr>
+		</table>
 		
-        });
-       
+		<div id="pagination">
 
-        </script>
+			<!-- 맨 처음 페이지로 이동하는 버튼 -->
+			<span th:if="${pageVo.startPage > 1}">
+				<button class="seq" th:text="'처음&emsp;'" th:value="${pageMapping}+1"></button>
+			</span>
+
+			<!-- 이전 블록으로 이동하는 버튼 -->
+			<span th:if="${pageVo.isPrev == true}">
+				<button class="seq" th:text="'이전'"
+					th:value="${pageMapping}+${pageVo.startPage - 1}"></button>
+			</span>
+
+			<!-- 시퀀스 보여주는 값을 변경. -->
+			<span
+				th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
+				<button class="seq" th:text="|&emsp;${pageNum}&emsp;|"
+					th:value="${pageMapping}+${pageNum}"></button>
+			</span>
+			<!-- 다음 블록으로 이동하는 버튼 -->
+			<span th:if="${pageVo.isNext == true}">
+				<button class="seq" th:text="'다음'"
+					th:value="${pageMapping}+${pageVo.endPage + 1}"></button>
+			</span>
+
+			<!-- 맨 뒷 페이지로 이동하는 버튼 -->
+			<span th:if="${pageVo.endPage < pageVo.totalPageCount}">
+				<button class="seq" th:text="|&emsp;끝|"
+					th:value="${pageMapping}+${pageVo.totalPageCount}"></button>
+			</span>
+		</div>
+		
+		
+		
+		
+	</div>
+
+
+
+
+</div>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+	$(function() {
+		$(".seq").click(function() {
+			console.log("clicked");
+			$.ajax({
+				url : $(this).val(),
+				success : function(x) {
+					$('#page').html(x);
+				}
+			})
+		});
+	});
+</script>
 
 </html>
