--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -61,6 +61,8 @@
 	</div>
 </header>
  <!-- SECTION 0 PRODUCTS SLIDE START-->
+
+
 	<div class="a">
 		<section class="sec0">
 			<div class="a-top">
@@ -79,9 +81,9 @@
  <!-- SECTION 1 LOGIN,JOIN START -->
  
  <div class="b">
-<!-----------로그인---------->
+<!--------------------로그인--------------------->
 		<section class="sec1">
-			<div class="b-l">
+			<div class="b-l" >
 				<form method="post" action = "/login" id="login-form">
 					<table>
 						<tr>
@@ -152,8 +154,6 @@
 					</table>
 				</form>
 			</div>
-		</section>
-	</div>
 			<div id="modal" class="modalWrap">
 				<div class="modalContent">
 					<form id="idCheck" method="post" onsubmit="return false">
@@ -163,25 +163,22 @@
 					</form>
 				</div>
 			</div>
-
-		</div>
-	</section>
-</div>
-<!-- SECTION1 LOGIN,JOIN END -->
+		</section>
+	</div>
 
 
-<!-- SECTION 2 CARDS STARTS -->
-
-
-<!-- SECTION 2 CARDS END -->
-
-
-<!-- SECTION3 MATCHING START -->
 	<div class="c">
 		<section class="sec2">
 
+
+
+
 			<div class="container">
-				<table class="table table-striped" border="1">
+
+
+
+
+				<table class="table table-striped" border="1" id="bobobo1">
 					<thead>
 						<tr>
 							<th>no</th>
@@ -226,11 +223,11 @@
 						<li><a href="#">5</a></li>
 					</ul>
 				</div>
+				<!---------------------------------------------------------------------------------------------------------------->
 
 
 
-
-				<table class="table table-striped" border="1">
+				<table class="table table-striped" border="1" id="bobobo2">
 				<thead>
 					<tr>
 						<th>no</th>
@@ -282,6 +279,7 @@
 			</table>
 
 
+
 				<div class="text-center">
 					<ul class="pagination">
 						<li><a href="#">1</a></li>
@@ -291,6 +289,8 @@
 						<li><a href="#">5</a></li>
 					</ul>
 				</div>
+				<!---------------------------------------------------------------------------------------------------------------->
+
 				<div class="board-button">
 					<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
 					<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
