--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -20,7 +20,7 @@
       }
       ul{
       	list-style :none;
-     	 padding-left :0px;
+     	 padding-left :0;
       }
       
       .board__image{
