--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -83,8 +83,8 @@
 
  -->
 <h2>[[${nickname}]]님</h2>
-<button id="edit-a">정보 수정</button>
-<button><a href="/logout">로그아웃</a></button>
+<button id="edit-a"><a href = "/member/memberUpdate" >정보 수정</a></button>
+<button><a href="/member/logout">로그아웃</a></button>
 </div>
 
 <div class="myLog-a">
