아이디 저장하기

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -87,7 +87,7 @@
 						<tr>
 							<td>
 								<label>
-									<input type="text" name="loginId" placeholder="ID">
+									<input type="text" name="loginId" placeholder="ID" id="loginId">
 								</label>
 							</td>
 						</tr>
@@ -423,5 +423,31 @@
 		}
 
 	</script>
+
+<script type="text/javascript">
+
+$('#login-form').submit(function(e){
+    if($('#remember-check').is(":checked")==true){
+       localStorage.setItem('loginId', $('#loginId').val());
+    }
+    
+ });
+ 
+ var loginId= document.querySelector("#loginId");
+ var storageCheck= localStorage.getItem('loginId');
+ 
+ console.log(loginId);
+ 
+    if(!storageCheck){
+    loginId.value="";
+    }else{
+    loginId.value=storageCheck;
+ }
+</script>
+
+
+
+
+
 </body>
 </html>
