--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -77,6 +77,9 @@
 <div class="mem-a">
 
 <div class="card-a">
+
+<img class="profile__image"
+					th:src="@{/profile/}+${memberNum}+.png" onerror="this.src='/images/alt.jpg'">
 <!-- 
 <img class="profile__image"
 					th:src="@{/img/}+${board.boardNum}+.png" onerror="this.src='/images/alt.jpg'">
