--- a/src/main/resources/static/css/Boardcss.css
+++ b/src/main/resources/static/css/Boardcss.css
@@ -1,80 +1,24 @@
-@charset "UTF-8";
-
-
-
-table {
-    border-collapse: collapse;
+.container .table-striped thead th:nth-child(1){
+    width: 40px;
 }
-
-caption {
-    display: none;
+.container .table-striped thead th:nth-child(2){
+    width: 80px;
 }
-
-a {
-    text-decoration: none;
-    color: inherit;
+.container .table-striped thead th:nth-child(3){
+    width: 40px;
 }
-
-.board_list_wrap {
-    padding: 50px;
+.container .table-striped thead th:nth-child(4){
+    width: 40px;
 }
-
-.board_list {
+.container .table-striped thead th:nth-child(5){
+    width: 800px;
+}
+.container .table-striped thead th:nth-child(6){
+    width: 60px;
+}
+.container .table-striped thead th:nth-child(7){
+    width: 60px;
+}
+.container{
     width: 100%;
-    border-top: 2px solid green;
-}
-
-
-.board_list tr {
-    border-bottom: 1px solid #ccc;
-}
-
-.board_list th,
-.board_list td {
-    padding: 10px;
-    font-size: 14px;
-}
-
-.board_list td {
-    text-align: center;
-}
-
-.board_list .tit {
-    text-align: left;
-}
-
-.board_list .tit:hover {
-    text-decoration: underline;
-}
-
-.board_list_wrap .paging {
-    margin-top: 20px;
-    text-align: center;
-    font-size: 0;
-}
-.board_list_wrap .paging a {
-    display: inline-block;
-    margin-left: 10px;
-    padding: 5px 10px;
-    border-radius: 100px;
-    font-size: 12px;
-}
-.board_list_wrap .paging a:first-child {
-    margin-left: 0;
-}
-
-.board_list_wrap .paging a.bt {
-    border: 1px solid #eee;
-    background: #eee;
-}
-
-.board_list_wrap .paging a.num {
-    border: 1px solid green;
-    font-weight: 600;
-    color: green;
-}
-
-.board_list_wrap .paging a.num.on {
-    background: green;
-    color: #fff;
 }
