--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -101,112 +101,83 @@
 </div>
 
         <!-- SECTION1 LOGIN,JOIN END -->
-        <!-- SECTION 2 CARDS STARTS -->
-        <!----------------------------------------- SECTION 3 bobobo-----------------------------------------------------  -->
-
-        <div class="c">
-            <section class="sec2">
-
-                <div class="container">
-                    <table class="table table-striped" border="1" id="bobobo0">
-                        <thead>
-                            <tr>
-                                <th>no</th>
-                                <th>카테고리</th>
-                                <th>스택</th>
-                                <th>제목</th>
-                                <th>작성자</th>
-                                <th>작성일</th>
-                                <th>조회수</th>
-                            </tr>
-                        </thead>
 
 
-                        <tbody>
-                            <tr th:each="board : ${boardList}">
-                                <td>
-                                    <a
-                                            th:href="@{/board/detail(boardNum=${board.boardNum})}"
-                                            th:text="${board.boardNum}"
-                                    ></a>
-                                </td>
-                                <td th:text="${board.category}"></td>
-                                <td>
-                                    <ul th:each="aa : ${board.stack}" >
-                                        <li>[[${aa}]]</li>
-                                    </ul>
-                                </td>
-                                <td ><a  th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a></td>
-                                <td th:text="${board.memberNum}"></td>
-                                <td th:text="${board.date}"></td>
-                                <td th:text="${board.startDate}"></td>
-                            </tr>
-                        </tbody>
 
-                    </table>
-                    <div class="text-center">
-                        <ul class="pagination">
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                        </ul>
-                    </div>
-
-                    <!----------------------------------------- SECTION 3 bobobo-----------------------------------------------------  -->
-
-                    <!----------------------------------------- SECTION 3 bobobo2-----------------------------------------------------  -->
-
-<table class="table table-striped" border="1" id="bobobo1">
-<thead>
-<tr>
-<th>no</th>
-<th>카테고리</th>
-<th>스택</th>
-<th>제목</th>
-<th>작성자</th>
-<th>작성일</th>
-<th>조회수</th>
-</tr>
-</thead>
-<div class="searchWrite">
-<div class="search">
-<form action="/board/list" method="get" >
-<select name="type" >
-<option value="S">stack</option>
-<option value="N">title</option>
-</select>
-<input type="text" name="search" />
-<input type="submit" value="검색" />
-</form>
-</div>
-<label class="write-label"><a href="write">글쓰기</a>
-</label>
-
-</div>
-
-<tbody id="list">
-<tr th:each="board : ${boardList}">
-<td>
-<a
-th:href="@{/board/detail(boardNum=${board.boardNum})}"
-th:text="${board.boardNum}"
-></a>
-</td>
-<td th:text="${board.category}"></td>
-<td>
-<ul th:each="aa : ${board.stack}" >
-<li>[[${aa}]]</li>
-</ul>
-</td>
-<td ><a  th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a></td>
-<td th:text="${board.memberNum}"></td>
-<td th:text="${board.date}"></td>
-<td th:text="${board.startDate}"></td>
-</tr>
-</tbody>
+<!----------------------------------------- SECTION 3 list-----------------------------------------------------  -->
+<div class="c">
+<section class="sec2">
+<table class="table table-striped" border="1">
+    <tbody id="list1">
+        <tr th:each="board : ${boardList}">
+            <td>
+                <a
+                        th:href="@{/board/detail(boardNum=${board.boardNum})}"
+                        th:text="${board.boardNum}"
+                ></a>
+            </td>
+            <td th:text="${board.category}"></td>
+            <td>
+                <ul th:each="aa : ${board.stack}" >
+                    <li>[[${aa}]]</li>
+                </ul>
+            </td>
+            <td ><a  th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a></td>
+            <td th:text="${board.memberNum}"></td>
+            <td th:text="${board.date}"></td>
+            <td th:text="${board.startDate}"></td>
+        </tr>
+    </tbody>
 </table>
+    <!--<div class="searchWrite">-->
+<!--<div class="search">-->
+<!--<form action="/board/list" method="get" >-->
+<!--<select name="type">-->
+<!--<option value="S">stack</option>-->
+<!--<option value="N">title</option>-->
+<!--</select>-->
+<!--<input type="text" name="search" />-->
+<!--<input type="submit" value="검색" />-->
+<!--</form>-->
+<!--</div>-->
+<!--<label class="write-label"><a href="write">글쓰기</a>-->
+<!--</label>-->
+<!--</div>-->
+
+
+<div class="text-center">
+<ul class="pagination">
+<li><a href="#">1</a></li>
+<li><a href="#">2</a></li>
+<li><a href="#">3</a></li>
+<li><a href="#">4</a></li>
+<li><a href="#">5</a></li>
+</ul>
+</div>
+
+
+
+    <tbody id="list2">
+        <tr th:each="board : ${boardList}">
+            <td>
+                <a
+                        th:href="@{/board/detail(boardNum=${board.boardNum})}"
+                        th:text="${board.boardNum}"
+                ></a>
+            </td>
+            <td th:text="${board.category}"></td>
+            <td>
+                <ul th:each="aa : ${board.stack}" >
+                    <li>[[${aa}]]</li>
+                </ul>
+            </td>
+            <td ><a  th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a></td>
+            <td th:text="${board.memberNum}"></td>
+            <td th:text="${board.date}"></td>
+            <td th:text="${board.startDate}"></td>
+        </tr>
+    </tbody>
+
                     <div class="text-center">
                         <ul class="pagination">
                             <li><a href="#">1</a></li>
@@ -216,22 +187,36 @@ th:text="${board.boardNum}"
                             <li><a href="#">5</a></li>
                         </ul>
                     </div>
-                    <!---------- SECTION 3 bobobo-------------->
-                    <div class="board-button">
-                        <button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
-                        <button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
-                        <button type="button" onclick="location.href='/board/list'">전체임시</button>
-                        <button type="button" onclick="location.href='/board/page'">페이지임시</button>
-
-                    </div>
-                </div>
+<!--                    <div class="board-button">-->
+<!--                        <button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>-->
+<!--                        <button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>-->
+<!--                        <button type="button" onclick="location.href='/board/list'">전체임시</button>-->
+<!--                        <button type="button" onclick="location.href='/board/page'">페이지임시</button>-->
+<!--                    </div>-->
             </section>
         </div>
-        <!-- SECTION3 MATCHING END -->
+        <!----------------------------------------- SECTION 3 list-----------------------------------------------------  -->
+
+        <!-- board  script-->
         <script defer>
-
-
+            $.ajax({
+                url : "/board/list?category=recruit",
+                success : function(x) {
+                    $('#list1').html(x);
+                }
+            })
+            $.ajax({
+                url : "/board/list?category=apply",
+                success : function(x) {
+                    $('#list2').html(x);
+                }
+            })
         </script>
+        <!-- board  script-->
+
+
+
+
 
         <script th:inline="javascript" charset='UTF-8' defer>
 
