--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -107,7 +107,18 @@
         <!-- SECTION 2 CARDS STARTS -->
         <!----------------------------------------- SECTION 3 bobobo-----------------------------------------------------  -->
 
-      
+      <!-- SECTION3 MATCHING START -->
+	<div class="c">
+		
+		<div class="board-button">
+					<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
+					<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
+					<button type="button" onclick="location.href='/board/list'">전체임시</button>
+					<button type="button" onclick="location.href='/board/page'">페이지임시</button>
+
+				</div>
+	</div>
+<!-- SECTION3 MATCHING END -->
         <!-- SECTION3 MATCHING END -->
         <script defer>
 
