--- a/src/main/resources/templates/board/page.html
+++ b/src/main/resources/templates/board/page.html
@@ -61,7 +61,7 @@
 					<li>[[${stacks}]]</li>
 				</ul>
 			</td>
-			<td><img class="board__image" th:src="@{/img/}+${board.boardNum}+.png" onerror="this.src='/images/alt.jpg'">
+			<td><img class="board__image" th:src="@{/img/}+${board.boardNum}+.png" onerror="this.src='/images/altLogo.jpg'">
 			</td>
 			<td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a>
 				<a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="|[${board.commentCount}]|"></a>
