--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -175,7 +175,18 @@
 
 <!-- SECTION 2 CARDS END -->
 
+<!-- SECTION3 MATCHING START -->
+	<div class="c">
+		
+		<div class="board-button">
+					<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
+					<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
+					<button type="button" onclick="location.href='/board/list'">전체임시</button>
+					<button type="button" onclick="location.href='/board/page'">페이지임시</button>
 
+				</div>
+	</div>
+<!-- SECTION3 MATCHING END -->
 
 
 
