--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -188,9 +188,9 @@ section{
     height: 60vh;
 
 }
-.a-top{position: absolute; margin:200px auto; width:100%; height: 50vh;  }
+.a-top{position: absolute; margin:220px auto;  width:100%; height: 5vh;  }
 
-.a-bottom{position: absolute; margin:600px auto; width:100%; height: 50vh;}
+.a-bottom{position: absolute; margin:400px auto; width:100%; height: 50vh;}
 
 .b-l{ float:left;  width: 50%; height: 100vh; left:0; bottom:0;}
 #login-form{  width: 50%; display: inline-block; margin: 40% auto; transform:translate(50%,0%);}
@@ -251,14 +251,14 @@ section{
     border: 1px solid red;
 }
 .b-a{position: relative; height: 100vh; text-align: center;}
+
 .mem-a{
     position:absolute;
     width:101%;
     margin:250px auto;
-    border: 1px solid red;
  }
 .card-a{width:40%; margin: auto;}
-.card-a button {margin-top:300px}
+.card-a button {margin-top:50px}
 
 .myLog-a{margin: auto;
     display: flex;}
@@ -278,8 +278,24 @@ section{
 #showList-a{}
 .b-a h2{}
 
-
-
+.card-a button{
+    width: 80px;
+    height: 20px;
+    border-radius: 10px;
+    font-weight:bold;
+    background-color: #fff;
+    border: none;
+}
+.myLog-a button{
+    margin-top: 5px;
+    width: 80px;
+    height: 20px;
+    border-radius: 10px;
+    font-weight:bold;
+    background-color: #fff;
+    border: none;
+    font-size:10px;
+}
 
 
 
@@ -305,7 +321,21 @@ section{
 
 }
 
+.c .board-button{
+    text-align: center;
+    padding-top: 25%;
+    transform: translate(20px, 0);
 
+}
+.c .board-button button{
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    font-weight:bold;
+    background-color: #fff;
+    border: none;
+
+}
 .c .searchWrite{
     margin-top:60%;
     position:absolute;
@@ -449,8 +479,136 @@ section{
     height: 140px;
     background: black;
 }
-.board-button{
-    text-align: center;
-   margin-top: 30px;
 
+#slider {
+    margin: 0 auto;
+    width: 800px;
+    max-width: 100%;
+    text-align: center;
+}
+#slider input[type=radio] {
+    display: none;
+}
+#slider label {
+    cursor:pointer;
+    text-decoration: none;
+}
+#slides {
+    padding: 10px;
+    border: 3px solid #ccc;
+    background: #fff;
+    position: relative;
+    z-index: 1;
+}
+#overflow {
+    width: 100%;
+    overflow: hidden;
+}
+#slide1:checked ~ #slides .inner {
+    margin-left: 0;
+}
+#slide2:checked ~ #slides .inner {
+    margin-left: -100%;
+}
+#slide3:checked ~ #slides .inner {
+    margin-left: -200%;
+}
+#slide4:checked ~ #slides .inner {
+    margin-left: -300%;
+}
+#slides .inner {
+    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+    width: 400%;
+    line-height: 0;
+    height: 300px;
+}
+#slides .slide {
+    width: 25%;
+    float:left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: #fff;
+}
+#slides .slide_1 {
+    background: #00171F;
+}
+#slides .slide_2 {
+    background: #003459;
+}
+#slides .slide_3 {
+    background: #007EA7;
+}
+#slides .slide_4 {
+    background: #00A8E8;
+}
+#controls {
+    margin: -180px 0 0 0;
+    width: 100%;
+    height: 50px;
+    z-index: 3;
+    position: relative;
+}
+#controls label {
+    transition: opacity 0.2s ease-out;
+    display: none;
+    width: 50px;
+    height: 50px;
+    opacity: .4;
+}
+#controls label:hover {
+    opacity: 1;
+}
+#slide1:checked ~ #controls label:nth-child(2),
+#slide2:checked ~ #controls label:nth-child(3),
+#slide3:checked ~ #controls label:nth-child(4),
+#slide4:checked ~ #controls label:nth-child(1) {
+    background: url(https://image.flaticon.com/icons/svg/130/130884.svg) no-repeat;
+    float:right;
+    margin: 0 -50px 0 0;
+    display: block;
+}
+#slide1:checked ~ #controls label:nth-last-child(2),
+#slide2:checked ~ #controls label:nth-last-child(3),
+#slide3:checked ~ #controls label:nth-last-child(4),
+#slide4:checked ~ #controls label:nth-last-child(1) {
+    background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
+    float:left;
+    margin: 0 0 0 -50px;
+    display: block;
+}
+#bullets {
+    margin: 150px 0 0;
+    text-align: center;
+}
+#bullets label {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius:100%;
+    background: #ccc;
+    margin: 0 10px;
+}
+#slide1:checked ~ #bullets label:nth-child(1),
+#slide2:checked ~ #bullets label:nth-child(2),
+#slide3:checked ~ #bullets label:nth-child(3),
+#slide4:checked ~ #bullets label:nth-child(4) {
+    background: #444;
+}
+@media screen and (max-width: 900px) {
+    #slide1:checked ~ #controls label:nth-child(2),
+    #slide2:checked ~ #controls label:nth-child(3),
+    #slide3:checked ~ #controls label:nth-child(4),
+    #slide4:checked ~ #controls label:nth-child(1),
+    #slide1:checked ~ #controls label:nth-last-child(2),
+    #slide2:checked ~ #controls label:nth-last-child(3),
+    #slide3:checked ~ #controls label:nth-last-child(4),
+    #slide4:checked ~ #controls label:nth-last-child(1) {
+        margin: 0;
+    }
+    #slides {
+        max-width: calc(100% - 140px);
+        margin: 0 auto;
+    }
 }
