--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -68,6 +68,50 @@
 			</div>
 			<div class="a-bottom">
 				<h1>역대 프로젝트</h1>
+				<div id="slider">
+					<input type="radio" name="slider" id="slide1" checked>
+					<input type="radio" name="slider" id="slide2">
+					<input type="radio" name="slider" id="slide3">
+					<input type="radio" name="slider" id="slide4">
+					<div id="slides">
+						<div id="overflow">
+							<div class="inner">
+								<div class="slide slide_1">
+									<div class="slide-content">
+										<h2>Slide 1</h2>
+									</div>
+								</div>
+								<div class="slide slide_2">
+									<div class="slide-content">
+										<h2>Slide 2</h2>
+									</div>
+								</div>
+								<div class="slide slide_3">
+									<div class="slide-content">
+										<h2>Slide 3</h2>
+									</div>
+								</div>
+								<div class="slide slide_4">
+									<div class="slide-content">
+										<h2>Slide 4</h2>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="controls">
+						<label for="slide1"></label>
+						<label for="slide2"></label>
+						<label for="slide3"></label>
+						<label for="slide4"></label>
+					</div>
+					<div id="bullets">
+						<label for="slide1"></label>
+						<label for="slide2"></label>
+						<label for="slide3"></label>
+						<label for="slide4"></label>
+					</div>
+				</div>
 			</div>
 		</section>
 	</div>
@@ -179,9 +223,9 @@
 	<div class="c">
 		
 		<div class="board-button">
-					<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
-					<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
-					<button type="button" onclick="location.href='/board/list'">전체임시</button>
+					<button type="button" onclick="location.href='/board/list?category=recruit'">구인 가기</button>
+					<button type="button" onclick="location.href='/board/list?category=apply'">구직 가기</button>
+					<button type="button" onclick="location.href='/board/list'">전체</button>
 					<button type="button" onclick="location.href='/board/page'">페이지임시</button>
 
 				</div>
