--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -155,18 +155,25 @@
 	<div class="c">
 		
 		<div class="board-button">
-					<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
-					<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
-					<button type="button" onclick="location.href='/board/list'">전체임시</button>
-					<button type="button" onclick="location.href='/board/page'">페이지임시</button>
+					<button type="button" onclick="location.href='/board/list?category=recruit'">구인 게시판</button>
+					<button type="button" onclick="location.href='/board/list?category=apply'">구직 게시판</button>
+					<button type="button" onclick="location.href='/board/list'">전체 게시판</button>
+					<button type="button" onclick="location.href='/board/page'">페이지</button>
 
 				</div>
 	</div>
+        <div id="list-container" >
+
+        </div>
 <!-- SECTION3 MATCHING END -->
         <!-- SECTION3 MATCHING END -->
         <script defer>
-
-
+                $.ajax({
+                    url : '/board/list',
+                    success : function(x) {
+                        $('#list-container').html(x);
+                    }
+                });
         </script>
 
        
