--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -153,13 +153,12 @@
 
       <!-- SECTION3 MATCHING START -->
 	<div class="c">
-		
-		<div class="board-button">
-					<button type="button" onclick="location.href='/board/list?category=recruit'">구인 게시판</button>
-					<button type="button" onclick="location.href='/board/list?category=apply'">구직 게시판</button>
-					<button type="button" onclick="location.href='/board/list'">전체 게시판</button>
-					<button type="button" onclick="location.href='/board/page'">페이지</button>
 
+		<div class="board-button">
+					<button id="bo1" type="button" >구인 게시판</button>
+					<button id="bo2" type="button">구직 게시판</button>
+					<button id="bo3" type="button">전체 게시판</button>
+					<button id="bo4" type="button" >페이지</button>
 				</div>
 	</div>
         <div id="list-container" >
@@ -174,6 +173,52 @@
                         $('#list-container').html(x);
                     }
                 });
+
+                $(function() {
+                    $("#bo1").click(function () {
+                        $.ajax({
+                            url: '/board/list?category=recruit',
+                            success: function (x) {
+                                $('#list-container').html(x);
+                            }
+
+                        })
+                    })
+                });
+                $(function() {
+                    $("#bo2").click(function () {
+                        $.ajax({
+                            url: '/board/list?category=apply',
+                            success: function (x) {
+                                $('#list-container').html(x);
+                            }
+
+                        })
+                    })
+                });
+                $(function() {
+                    $("#bo3").click(function () {
+                        $.ajax({
+                            url: '/board/list',
+                            success: function (x) {
+                                $('#list-container').html(x);
+
+                            }
+                        })
+                    })
+                });
+                $(function() {
+                    $("#bo4").click(function () {
+                        $.ajax({
+                            url: '/board/page',
+                            success: function (x) {
+                                $('#list-container').html(x);
+                            }
+
+                        })
+                    })
+                });
+
         </script>
 
        
