--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -164,8 +164,8 @@
 					<table>
 						<tr>
 							<td>
-								<label for=name>
-									<input id="name" name="name" type="text" placeholder="회원가입 아이디">
+								<label for=useId>
+									<input id="useId" name="useId" type="text" placeholder="회원가입 아이디">
 								</label>
 							</td>
 						</tr>
@@ -179,8 +179,8 @@
 						</tr>
 						<tr>
 							<td>
-								<label for=name>
-									<input id="nick" name="name" type="text" placeholder="닉네임">
+								<label for=nick>
+									<input id="nick" name="nickname" type="text" placeholder="닉네임">
 								</label>
 							</td>
 						</tr>
