--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -165,7 +165,7 @@
 						<tr>
 							<td>
 								<label for=useId>
-									<input id="useId" name="useId" type="text" placeholder="회원가입 아이디">
+									<input id="useId" name="useId" type="text" placeholder="회원가입 아이디" readonly>
 								</label>
 							</td>
 						</tr>
