--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -323,7 +323,7 @@ section{
 
 .c .board-button{
     text-align: center;
-    padding-top: 25%;
+    margin-top: 25%;
     transform: translate(20px, 0);
 
 }
