--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -6,6 +6,34 @@
     <title>Insert title here</title>
 
   </head>
+  <style>
+		table,
+		th,
+		td {
+			border: 1px solid black;
+			border-collapse: collapse;
+			text-align: center;
+		}
+
+		table {
+			width: 100%;
+		}
+
+		table a {
+			color: blue;
+		}
+
+		ul {
+			list-style: none;
+			padding-left: 0px;
+		}
+
+		.board__image {
+			width: 120px;
+			height: 80px;
+			object-fit: scale-down;
+		}
+	</style>
   <body>
   <div class="container">
     <table class="table table-striped" border="1">
