레이아웃 fragment 설정 및 부트스트랩 grid 적용
.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,32 @@
+<!DOCTYPE html>
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
+
+
+
   <!--headerFragment 선언-->
   <div th:fragment="headerFragment">
     <h1>Header Section</h1>
+    
+    <div class="fragment-header">
+    <div class="fragment-header-logo">
+    </div>
+    
+    </div>
+   
+    <h2> navbar section</h2>
   </div>
+  
+
 </html>
+
+
+
+
+
+<style>
+
+.fragment-header-logo{
+background-image:url('/images/altLogo.jpg');
+
+}
+</style>
