--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
   <!--footerFragment 선언-->
   <div th:fragment="sidebarFragment">
-    <h1>Sidebar Section</h1>
+    <h1>sidebar Section</h1>
+    
+    <div class="container-sidebar">
+<div class="sidebar-board1">
+</div>
+<div class="sidebar-board2">
+</div><div class="sidebar-board3">
+</div>
+    
+    </div>
   </div>
 </html>
