--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -1,62 +1,37 @@
-<html
-  xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
-  <head th:fragment="mainHeader">
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <title>default layout</title>
-    <style></style>
+<html lagn="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<head th:replace="~{fragments/config :: configFragment}"></head>
 
 
-  </head>
-  <body>
-    <!-- container-fluid는 부트스트랩 요소. 전체를 감싸서 반응형으로 만드는 margin 0 auto 역할-->
-    <div class="container-fluid">
-      <!-- header -->
-      <th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
-      <!-- right sidebar-->
-      <th:block th:replace="~{fragments/sidebar :: sidebarFragment}"></th:block>
+<body>
+  <!-- container-fluid는 부트스트랩 요소. 전체를 감싸서 반응형으로 만드는 margin 0 auto 역할-->
+  <div class="container-fluid">
+    <!-- header -->
+    <th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
 
-      <!--content-->
-      <div layout:fragment="content">공통 레이아웃</div>
 
-      <!-- footer -->
-      <th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
+
+
+    <div class="row">
+      <div class="col-md-9">
+        <!--content-->
+        <div layout:fragment="content">공통 레이아웃</div>
+
+      </div>
+
+      <div class="col-md-3">
+        <!-- right sidebar-->
+        <th:block th:replace="~{fragments/sidebar :: sidebarFragment}"></th:block>
+      </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-   
-  </body>
-  
-  <script>
-  
-  </script>
+
+    <!-- footer -->
+    <th:block th:replace="~{fragments/footer :: footerFragment}"></th:block>
+  </div>
+
+
+
+</body>
+<th:block layout:fragment="script">
 </html>
