--- a/src/main/resources/templates/board/page.html
+++ b/src/main/resources/templates/board/page.html
@@ -1,94 +1,85 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/default_layout}">
 
-<head>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" th:href="@{/css/Boardcss.css}" />
-	<title>Insert title here</title>
-	<link rel = "stylesheet" href = "/css/style.css" th:href="@{/css/style.css}">
-</head>
-
-
-<style>
-	 td{
-		height: 2px;
-	}
-#pagination{
-	width: 50%;
-
-	margin:0 auto;
+<th:block layout:fragment="css">
+	<style>
+.stackList {
+	list-style: none;
 }
-.write{
-	float: right;
 
+.table-page {
+	text-align: center;
+	margin: 0 auto;
+}
+
+.board__image {
+	width: 120px;
+	height: 80px;
+}
+
+.pagination {
+	text-align: center;
+	display: flex;
+	justify-content: center;
 }
 </style>
+</th:block>
 <body>
 
+	<div layout:fragment="content">
 
-	<table class="table table-striped" border="1">
-		<thead>
-			<tr>
-				<th>글번호</th>
-				<th>카테고리</th>
-				<th>스택</th>
-				<th>썸네일</th>
-				<th>제목</th>
-				<th>작성자</th>
-				<th>작성일자</th>
-				<th>시작일자</th>
+		<h2>선택한 게시판 제목</h2>
+		<table class="table-page" border="1">
+			<thead>
+				<tr>
+					<th>글번호</th>
+					<th>카테고리</th>
+					<th>스택</th>
+					<th>썸네일</th>
+					<th>제목</th>
+					<th>작성자</th>
+					<th>작성일자</th>
+					<th>시작일자</th>
+				</tr>
+			</thead>
+			<tr th:each="board : ${boardList}">
+				<td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.boardNum}"></a></td>
+				<td th:text="${board.category}"></td>
+				<td>
+						<div th:each="stacks : ${board.stack}">
+				<div class="stackList">[[${stacks}]]</div>
+			</div>
+				</td>
+				<td><img class="board__image" th:src="@{/img/}+${board.boardNum}+.png" onerror="this.src='/images/altLogo.jpg'"></td>
+				<td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a> <a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="|[${board.commentCount}]|"></a></td>
+				<td th:text="${board.memberNum}"></td>
+				<td th:text="${board.date}"></td>
+				<td th:text="${board.startDate}"></td>
 			</tr>
-		</thead>
-		<tr th:each="board : ${boardList}">
-			<td>
-				<a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.boardNum}"></a>
-			</td>
-			<td th:text="${board.category}"></td>
-			<td>
-				<ul th:each="stacks : ${board.stack}">
-					<li>[[${stacks}]]</li>
-				</ul>
-			</td>
-			<td><img class="board__image" th:src="@{/img/}+${board.boardNum}+.png" onerror="this.src='/images/altLogo.jpg'">
-			</td>
-			<td><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a>
-				<a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="|[${board.commentCount}]|"></a>
-			</td>
-			<td th:text="${board.memberNum}"></td>
-			<td th:text="${board.date}"></td>
-			<td th:text="${board.startDate}"></td>
-		</tr>
-	</table>
+		</table>
 
 
-	<div id="pagination">
-		<!-- 맨 처음 페이지로 이동하는 버튼 -->
-		<span th:if="${pageVo.startPage > 1}">
-			<a th:href="@{'/board/page?page=1'+|&&category=${category}|}" th:text="'처음&emsp;'"></a>
-		</span>
+		<div class="pagination">
+			<!-- 맨 처음 페이지로 이동하는 버튼 -->
+			<span th:if="${pageVo.startPage > 1}"> <a th:href="@{'/board/page?page=1'+|&&category=${category}|}" th:text="'처음&emsp;'"></a>
+			</span>
 
-		<!-- 이전 블록으로 이동하는 버튼 -->
-		<span th:if="${pageVo.isPrev == true}">
-			<a th:href="@{'/board/page?page='+${pageVo.startPage - 1}+|&&category=${category}|}" th:text="'이전'"></a>
-		</span>
+			<!-- 이전 블록으로 이동하는 버튼 -->
+			<span th:if="${pageVo.isPrev == true}"> <a th:href="@{'/board/page?page='+${pageVo.startPage - 1}+|&&category=${category}|}" th:text="'이전'"></a>
+			</span>
 
-		<!-- 시퀀스 보여주는 값을 변경. -->
-		<span th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
-			<a class="div2" th:href="@{'/board/page?page='+${pageNum}+|&&category=${category}|}"
-				th:text="|&emsp;${pageNum}&emsp;|"></a>
-		</span>
+			<!-- 시퀀스 보여주는 값을 변경. -->
+			<span th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}"> <a class="div2" th:href="@{'/board/page?page='+${pageNum}+|&&category=${category}|}" th:text="|&emsp;${pageNum}&emsp;|"></a>
+			</span>
 
-		<!-- 다음 블록으로 이동하는 버튼 -->
-		<span th:if="${pageVo.isNext == true}">
-			<a th:href="@{'/board/page?page='+|${pageVo.endPage + 1}|+|&&category=${category}|}" th:text="'다음'"></a>
-		</span>
+			<!-- 다음 블록으로 이동하는 버튼 -->
+			<span th:if="${pageVo.isNext == true}"> <a th:href="@{'/board/page?page='+|${pageVo.endPage + 1}|+|&&category=${category}|}" th:text="'다음'"></a>
+			</span>
 
-		<!-- 맨 뒷 페이지로 이동하는 버튼 -->
-		<span th:if="${pageVo.endPage < pageVo.totalPageCount}">
-			<a th:href="@{'/board/page?page='+${pageVo.totalPageCount}+|&&category=${category}|}"
-				th:text="|&emsp;마지막페이지|"></a>
-		</span>
-		<a href="write" class="write">글쓰기</a>
+			<!-- 맨 뒷 페이지로 이동하는 버튼 -->
+			<span th:if="${pageVo.endPage < pageVo.totalPageCount}"> <a th:href="@{'/board/page?page='+${pageVo.totalPageCount}+|&&category=${category}|}" th:text="|&emsp;마지막페이지|"></a>
+			</span> <a href="write" class="write">글쓰기</a>
+		</div>
 	</div>
 </body>
 
