--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -12,28 +12,10 @@
 	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
 	crossorigin="anonymous"/>
 
-
-<!-- style.css 쓰고싶으면 아래 주석 살리기 -->
-<!--<link rel="stylesheet" type="text/css" href="/css/style.css"/>  -->
+<link rel="icon" href="/images/favicon.jpg"/>
+<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 
 <style>
-* {
-	border: 1px solid black;
-  
-}
-.fragment-header-logo{
-background-image:url('/images/altLogo.jpg');
-background-size:cover;
-width:300px;
-height:100px;
-}
-
-.sidebar-board3{
-
-width:100%;
-height:300px;
-box-sizing:border-box;
-}
 </style>
 <title>default layout</title>
 
