--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,24 @@
-@charset "UTF-8";
+* {
+	border: 1px solid black;
+  
+}
+.fragment-header-logo{
+background-image:url('/images/altLogo.jpg');
+background-size:cover;
+width:300px;
+height:100px;
+}
 
-*{
-	border:1px solid black;
+
+.container-sidebar{
+	object-fit:contain;
+	overflow:hidden;
+}
+
+.sidebar-board3{
+
+width:100%;
+height:300px;
+box-sizing:border-box;
+object-fit:contain;
 }
