--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
 
   <!--footerFragment 선언-->
-  <div th:fragment="footerFragment" style="background-color:purple">
+  <div th:fragment="footerFragment" class="footerFragment">
     <h1>Footer Section</h1>
   </div>
 </html>
